MCR-3277 Enable PMD rule SingletonClassReturningNewInstance